First round of Java 5 generic types applied to org.geotools.resources and org.geotools.util packages. As a side effect, removed the deprecated org.geotools.resources.TestData class (moved to org.geotools.test).
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@27500 e5c1c795-43da-0310-a71f-fac65c449510